backend-handler/deploy-on-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: switcher-svc
spec:
  type: ClusterIP
  selector:
    app: switcher
  ports:
    - name: http
      port: 80
      targetPort: 8080
